--- a/templates/pages/support/security.html
+++ b/templates/pages/support/security.html
@@ -6,7 +6,7 @@
 
 <p>
 If you wish to report a new security vulnerability in PostgreSQL, please
-send an email to 
+send an email to
 <a href="mailto:security@postgresql.org">security@postgresql.org</a>.
 For reporting non-security bugs, please see the <a href="/support/submitbug">Report a Bug</a> page.
 </p>
@@ -17,12 +17,12 @@ The PostgreSQL Global Development Group (PGDG) takes security seriously,
 allowing our users to place their trust in the web sites and applications
 built around PostgreSQL. Our approach covers fail-safe configuration options,
 a secure and robust database server as well as good integration with other
-security infrastructure software. 
+security infrastructure software.
 </p>
 
 <p>
 PostgreSQL security updates are primarily made available as <a href="/support/versioning">minor version</a>
-upgrades. You are always advised to use the latest minor version available, 
+upgrades. You are always advised to use the latest minor version available,
 as it will likely also contain other non-security related fixes. All known
 security issues are always fixed in the next major release, when it comes out.
 </p>
@@ -31,13 +31,13 @@ security issues are always fixed in the next major release, when it comes out.
 PGDG believes that accuracy, completeness and availability of security
 information is essential for our users. We choose to pool all information on
 this one page, allowing easy searching for vulnerabilities by a range of
-criteria. 
+criteria.
 </p>
 
 <p>
 The following table lists all known security issues.
 Please note that versions prior to 9.1 are no longer
-supported.  An archive of vulnerabilities found only in unsupported 
+supported.  An archive of vulnerabilities found only in unsupported
 versions is
 <a href="/support/security_archive">on our Security Archive page</a>,
 but vulnerability information on those versions is no longer updated,
@@ -62,7 +62,25 @@ to determine if the bug affects specific installations or not.
    <th class="colMid"><a href="#cls">Class</a></th>
    <th class="colLast">Description</th>
   </tr>
-  
+
+  <tr valign="top">
+   <td class="colFirst"><a href="https://access.redhat.com/security/cve/CVE-2016-2193">CVE-2016-2193</a></td>
+   <td class="colMid">9.5</td>
+   <td class="colMid">9.5.2</td>
+   <td class="colMid">core server</td>
+   <td class="colMid">C</td>
+   <td class="colLast">Plan cache might use wrong role context for RLS policy</td>
+  </tr>
+
+  <tr valign="top">
+   <td class="colFirst"><a href="https://access.redhat.com/security/cve/CVE-2016-3065">CVE-2016-3065</a></td>
+   <td class="colMid">9.5</td>
+   <td class="colMid">9.5.2</td>
+   <td class="colMid">contrib</td>
+   <td class="colMid">C</td>
+   <td class="colLast">pageinspect does not check permissions for BRIN indexes</td>
+  </tr>
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2016-0773">CVE-2016-0773</a></td>
    <td class="colMid">9.5, 9.4, 9.3, 9.2, 9.1</td>
@@ -71,7 +89,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">C</td>
    <td class="colLast">Unchecked regex can crash the server</td>
   </tr>
-  
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2015-5289">CVE-2015-5289</a></td>
    <td class="colMid">9.4, 9.3</td>
@@ -80,7 +98,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">B</td>
    <td class="colLast">Unchecked JSON input can crash the server</td>
   </tr>
-    
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2015-5288">CVE-2015-5288</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -89,7 +107,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">C</td>
    <td class="colLast">Memory leak in crypt() function.</td>
   </tr>
-    
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2015-3165">CVE-2015-3165</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -98,7 +116,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">B</td>
    <td class="colLast">Double "free" after authentication timeout</td>
   </tr>
-  
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2015-3166">CVE-2015-3166</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -107,7 +125,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">D</td>
    <td class="colLast">Unanticipated errors from the standard library.</td>
   </tr>
-  
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2015-3167">CVE-2015-3167</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -116,7 +134,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">C</td>
    <td class="colLast">pgcrypto has multiple error messages for decryption with an incorrect key.</td>
   </tr>
-    
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2015-0241">CVE-2015-0241</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -125,7 +143,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">C</td>
    <td class="colLast">Buffer overruns in "to_char" functions.</td>
   </tr>
-  
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2015-0242">CVE-2015-0242</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -134,7 +152,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">C</td>
    <td class="colLast">Buffer overrun in replacement printf family of functions.</td>
   </tr>
-  
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2015-0243">CVE-2015-0243</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -143,7 +161,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">C</td>
    <td class="colLast">Memory errors in functions in the pgcrypto extension.</td>
   </tr>
-  
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2015-0244">CVE-2015-0244</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -152,7 +170,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">C</td>
    <td class="colLast">An error in extended protocol message reading.</td>
   </tr>
-  
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2014-8161">CVE-2014-8161</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -160,8 +178,8 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">core server</td>
    <td class="colMid">C</td>
    <td class="colLast">Constraint violation errors can cause display of values in columns which the user would not normally have rights to see.</td>
-  </tr>  
-  
+  </tr>
+
   <tr valign="top">
    <td class="colFirst"><a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2014-0067">CVE-2014-0067</a></td>
    <td class="colMid">9.4, 9.3, 9.2, 9.1, 9.0</td>
@@ -350,7 +368,7 @@ to determine if the bug affects specific installations or not.
    <td class="colMid">C</td>
    <td class="colLast">Line breaks in object names can be exploited to execute arbitrary SQL when reloading a pg_dump file.</td>
   </tr>
-  
+
  </table>
 </div>
 
@@ -388,7 +406,7 @@ The following vulnerability class references are used in the above table:
    <td class="colFirst">D</td>
    <td class="colLast">A vulnerability that is exploitable for denial-of-service, but requiring a valid prior login.</td>
   </tr>
-  
+
  </table>
 
 </div>
