Fixes per -www, and per translators.

--- a/templates/pages/about/press/presskit96/es.html
+++ b/templates/pages/about/press/presskit96/es.html
@@ -134,7 +134,7 @@ Phone: 584244374108</p>
 
 <ul>
 <li><a href="http://www.postgresql.org/media/img/about/press/elephant.png">Logotipo Elefante PostgreSQL, formato PNG</a></li>
-<li><a href="http://www.postgresql.org/media/img/about/press/elephant64.jpg">Ícono Elefante PostgreSQL</a></li>
+<li><a href="http://www.postgresql.org/media/img/about/press/elephant64.png">Ícono Elefante PostgreSQL</a></li>
 <li><a href="http://www.postgresql.org/media/img/about/press/slonik_with_black_text_and_tagline.gif">Banner de PostgreSQL con Logotipo, Elefante y Eslogan</a></li>
 </ul>
 <p>
