--- a/templates/pages/about/press/presskit96/it.html
+++ b/templates/pages/about/press/presskit96/it.html
@@ -23,7 +23,7 @@
 
 <a name="original_release"></a><h2>Comunicato stampa originale</h2>
 
-<p>29 SETTEMBRE 2016: PostgreSQL 9.6, l'ultima versione del più avanzato database SQL open source, è stato rilasciato oggi dal PostgreSQL Global Development Group. Questa release migliora la scalabilità verticale e orizzontale di database con alti requisiti di performance. Le nuove funzionalità comprendono query parallele, maggior controllo nella replica sincrona, ricerche di frasi, oltre ai consueti miglioramenti in ambito prestazioni e usabilità.
+<p>29 SETTEMBRE 2016: PostgreSQL 9.6, l'ultima versione del più avanzato database SQL open source, è stato rilasciato oggi dal PostgreSQL Global Development Group. Questa release migliora la scalabilità verticale e orizzontale di database con alti requisiti di performance. Le nuove funzionalità comprendono query parallele, maggior controllo nella replica sincrona, ricerche di frasi, oltre ai consueti miglioramenti in ambito di prestazioni e di usabilità.
 </p><p>
 <strong>Scalabilità verticale tramite query parallele</strong>
 </p><p>
@@ -104,7 +104,7 @@ Mobile: +39 338 1566217</p>
 
 <ul>
 <li><a href="http://www.postgresql.org/media/img/about/press/elephant.png">Logo elefante di PostgreSQL, formato PNG</a></li>
-<li><a href="http://www.postgresql.org/media/img/about/press/elephant64.jpg">Icona elefante di PostgreSQL</a></li>
+<li><a href="http://www.postgresql.org/media/img/about/press/elephant64.png">Icona elefante di PostgreSQL</a></li>
 <li><a href="http://www.postgresql.org/media/img/about/press/slonik_with_black_text_and_tagline.gif">Banner di PostgreSQL con logo, elefante e slogan</a></li>
 </ul>
 <p>
