--- a/templates/pages/about/press/presskit96/en.html
+++ b/templates/pages/about/press/presskit96/en.html
@@ -23,7 +23,7 @@
 
 <a name="original_release"></a><h2>Original Press Release</h2>
 
-<p>29 SEPTEMBER 2016: PostgreSQL 9.6, the latest version of the world's leading open source SQL database, was released today by the PostgreSQL Global Development Group. This release will allow users to both scale up and scale out high performance database workloads. New features include parallel query, synchronous replication improvements, phrase search, and improvements to performance and usability.</p>
+<p>29 SEPTEMBER 2016: PostgreSQL 9.6, the latest version of the world's leading open source relational database, was released today by the PostgreSQL Global Development Group. This release will allow users to both scale up and scale out high performance database workloads. New features include parallel query, synchronous replication improvements, phrase search, and improvements to performance and usability.</p>
 
 <b>Scale Up with Parallel Query</b>
 
@@ -134,7 +134,7 @@ Arul Shaji Arulappan and Richard Sayad
 
 <ul>
 <li><a href="https://www.postgresql.org/media/img/about/press/elephant.png">PostgreSQL Elephant Logo, PNG format</a></li>
-<li><a href="https://www.postgresql.org/media/img/about/press/elephant64.jpg">PostgreSQL Elephant Icon</a></li>
+<li><a href="https://www.postgresql.org/media/img/about/press/elephant64.png">PostgreSQL Elephant Icon</a></li>
 <li><a href="https://www.postgresql.org/media/img/about/press/slonik_with_black_text_and_tagline.gif">PostgreSQL Banner with Logo, Elephant and Slogan</a></li>
 </ul>
 <p>
