--- a/templates/pages/about/press/presskit96/ru.html
+++ b/templates/pages/about/press/presskit96/ru.html
@@ -140,7 +140,7 @@ PostgreSQL и другими базами данных. Например, Postgr
 
 <ul>
 <li><a href="https://www.postgresql.org/media/img/about/press/elephant.png">Логотип слона PostgreSQL в формате PNG</a></li>
-<li><a href="https://www.postgresql.org/media/img/about/press/elephant64.jpg">Значок слона PostgreSQL</a></li>
+<li><a href="https://www.postgresql.org/media/img/about/press/elephant64.png">Значок слона PostgreSQL</a></li>
 <li><a href="https://www.postgresql.org/media/img/about/press/slonik_with_black_text_and_tagline.gif">Баннер PostgreSQL с логотипом, слоном и слоганом</a></li>
 </ul>
 <p>Модификация и распространение всех приведенных логотипов разрешена в соответствии с лицензией PostgreSQL.
